--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.3",
+    "@google/generative-ai": "^0.19.0",
     "@neondatabase/serverless": "^0.9.4",
     "@next/env": "^14.2.13",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -20,11 +21,13 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.429.0",
+    "moment": "^2.30.1",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "drizzle-kit": "^0.24.2",
